Fix spacing on navigation choices

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -19,7 +19,7 @@
 }
 
 .routeContainer {
-  flex-basis: 150px;
   font-size: 16px;
   font-weight: bold;
+  padding: 0px 50px;
 }
